--- a/assets/scss/components/_c-section-asset.scss
+++ b/assets/scss/components/_c-section-asset.scss
@@ -155,6 +155,10 @@ $assetOuterSpace: $assetOuterSpace+60px;
 
     &--position {
 
+        &-center {
+            background-position: center;
+        }
+
         &-top {
             background-position-y: top;
         }
